--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "kaspanodemonitorbackend",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "start": "node index.js",
@@ -9,10 +11,9 @@
     "bignumber.js": "^9.1.1",
     "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
-    "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
-    "kaspajs": "^2.0.1",
+    "kaspajs": "github:GateKVite/Kaspajs",
     "loglevel": "^1.8.1",
     "modernlog": "^1.1.0",
     "morgan": "^1.10.0"
