--- a/server/.env.example
+++ b/server/.env.example
@@ -6,8 +6,8 @@ NODE_URL=1.2.3.4:16110
 # SUMMARY: This setting allows the server to send information about itself to the client.
 # TODO: Let user manually set the specification in case the node monitor is running on a different machine.
 ALLOW_SERVER_INFORMATION=true
-# Set server location (preferably country) 
-LOCATION=Kasland
+# Node location (preferably country) 
+NODE_LOCATION=Kasland
 
 # LOG LEVELS
 # trace -> issues that are not errors but are useful to debug, not used for now
