--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "eslint": "^8.31.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "nodemon": "^2.0.20"
   }
 }
