--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd server/ && npm start",
-    "preinstall": "cd server/ && npm install && cd ../client/ && npm install"
+    "preinstall": "cd server/ && npm install && cd ../client/ && npm install",
+    "bumpversion": "npm version patch && cd server/ && npm version patch && cd ../client/ && npm version patch"
   },
   "author": "iMalFect",
   "license": "ISC"
