--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,7 @@ NODE_URL=1.2.3.4:16110
 # SUMMARY: This setting allows the server to send information about itself to the client.
 # TODO: Let user manually set the specification in case the node monitor is running on a different machine.
 ALLOW_SERVER_INFORMATION=true
+
 # Node location (preferably country) 
 NODE_LOCATION=Kasland
 
@@ -20,6 +21,11 @@ LOG_LEVEL=info
 # PORT
 # The port that the server will listen on
 PORT=3000
+
+# HOST
+# Host that the server will use (HINT: use 127.0.0.1 for local and 0.0.0.0 for public)
+# DEFAULT is 127.0.0.1
+HOST=127.0.0.1
 
 # Serve Frontend
 # If you want to serve the frontend with the server, set this to true
