--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,20 @@
 version: "3.9"
 
 services:
+  client:
+    container_name: kaspanodemon_client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    ports:
+      - "80:80"
+
   server:
     container_name: kaspanodemon_server
-    image: "node:18"
-    working_dir: /var/www
-    volumes:
-    - ./server:/var/www
-    command: /bin/bash -c "npm install && npm start"
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    restart: unless-stopped
     ports:
-    - "3100:3000"
+    - "8124:3000"
