--- a/KasNodeMon/package.json
+++ b/KasNodeMon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kasnodemon",
   "type": "module",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Kasnodemon is a tool that lets you easily manage your kaspa node monitor instance.",
   "main": "bin/index.js",
   "bin": {
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "adm-zip": "^0.5.10",
+    "bignumber.js": "^9.1.1",
     "chalk": "^5.2.0",
     "cli-spinners": "^2.7.0",
     "commander": "^10.0.0",
@@ -27,6 +28,7 @@
     "execa": "^7.1.1",
     "fs-extra": "^11.1.0",
     "inquirer": "^9.1.4",
+    "kaspajs": "github:GateKVite/Kaspajs",
     "node-fetch": "^3.3.1",
     "ora": "^6.3.0"
   },
