--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaspanodemonitorfrontend",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Kaspa Node Monitor is a great tool to monitor your kaspa node",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "build": "webpack --mode production --config ./webpack.prod.js"
   },
   "author": "iMalFect",
-  "license": "GPL-3.0-or-later",
+  "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
