--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kaspanodemonitorbackend",
-  "version": "0.1.3",
+  "version": "0.1.4",
+  "license": "ISC",
   "type": "module",
   "scripts": {
     "start": "node index.js",
