--- a/server/.env.example
+++ b/server/.env.example
@@ -4,10 +4,13 @@ NODE_URL=1.2.3.4:16110
 
 # Allow Server Information
 # SUMMARY: This setting allows the server to send information about itself to the client.
-# TODO: Let user manually set the specification in case the node monitor is running on a different machine.
 ALLOW_SERVER_INFORMATION=true
-
-# Node location (preferably country) 
+# If you want to set the server information manually, use the variables below, otherwise leave them blank
+# And the server will automatically pull them from the system
+SERVER_INFORMATION_HOSTNAME=
+SERVER_INFORMATION_CPU_MODEL=
+SERVER_INFORMATION_CPU_THREADS=
+# Node location (preferably country)
 NODE_LOCATION=Kasland
 
 # LOG LEVELS
