--- a/KasNodeMon/package.json
+++ b/KasNodeMon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kasnodemon",
   "type": "module",
-  "version": "0.2.03",
+  "version": "0.2.05",
   "description": "Kasnodemon is a tool that lets you easily manage your kaspa node monitor instance.",
   "main": "bin/index.js",
   "bin": {
@@ -30,7 +30,8 @@
     "inquirer": "^9.1.4",
     "kaspajs": "github:GateKVite/Kaspajs",
     "node-fetch": "^3.3.1",
-    "ora": "^6.3.0"
+    "ora": "^6.3.0",
+    "slash": "^5.1.0"
   },
   "repository": "https://github.com/iMalFect/KaspaNodeMonitor"
 }
