--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaspanodemonitor",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "Kaspa Node Monitor is a tool that lets you monitor your Kaspa node in real time",
   "main": "index.js",
   "scripts": {
@@ -9,5 +9,8 @@
     "preinstall": "cd server/ && npm install && cd ../client/ && npm install"
   },
   "author": "iMalFect",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "get-folder-size": "^4.0.0"
+  }
 }
